@@ -1,3 +1,11 @@
+2008-04-14  Kevin B. Kenny <kennykb@acm.org>
+
+	* unix/tclUnixTime.c (NativeGetTime): Removed obsolete use of
+	'struct timezone' in the call to 'gettimeofday'. [Bug 1942197].
+	* tests/clock.test (clock-33.5, clock-33.5a, clock-33.8, clock-33.8a):
+	Added comments to the test that it can fail on a heavily loaded
+	system.
+
 2008-04-10  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Keeping check for negative
